# GPGPUA

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
industrial_version/: CMakeLists.txt
industrial_version/src/: fix_gpu.cu  image.hh  main.cu  main_cpu.cu  main_indus.cu  main_indus.cuh  main_kernel.cu  main_kernel.cuh
industrial_version/src/indus/: fix_gpu.cu
industrial_version/src/kernel/: find_first_value.cu  fix_gpu.cu  image.hh  map.cu  test_main.cu
kernel_version/: CMakeLists.txt
kernel_version/src/: calculate_mask.cu  fix_gpu.cu  fix_gpu.cuh  kernel.cuh  main.cu  map.cu  scan.cu  scattering.cu
src/: main.cu  main.cuh  main_cpu.cu  main_cpu.cuh  main_indus.cu  main_kernel.cu
src/cpu/: fix_cpu.cuh
src/indus/: fix_gpu.cu  fix_gpu.cuh  indus.cu
src/kernel/: calculate_mask.cu  find_first_value.cu  fix_gpu.cu  fix_gpu.cuh  histo.cu  kernel.cuh  map.cu  reduce.cu  reduce.cuh  scan.cu
